# athlos-hub

./: .dockerignore  .env.example  .gitignore  DEPLOY_SUMMARY.md  README_DEPLOY.md  docker-compose-local.yml  docker-compose.prod.yml  docker-compose.registry.yml  keycloak_backup.sql  setup-local-db.sh
libs/common/: pyproject.toml
libs/common/common/: exceptions.py  logging.py
libs/common/common/api/: handlers.py
libs/common/common/security/: jwt_handler.py  roles.py
libs/database/: README.md  pyproject.toml
libs/database/database/: __init__.py  base.py  client.py  dependencies.py
libs/upload_s3/: README.md  pyproject.toml
libs/upload_s3/upload_s3/: main.py
services/auth-service/: .env.example  .pylintrc  Dockerfile  entrypoint.sh  pyproject.toml  rundev.sh
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 7aa28378b8b7_initial_models_with_user_organization_.py
services/auth-service/scripts/: run-migrations.sh
services/auth-service/src/: main.py
services/auth-service/src/auth_service/: main.py
services/auth-service/src/auth_service/api/: deps.py  middleware.py  router.py
services/auth-service/src/auth_service/api/endpoints/: admin.py  auth.py  health.py  organizations.py  users.py
services/auth-service/src/auth_service/core/: app.py  config.py  exceptions.py  keycloak_provider.py  security.py
services/auth-service/src/auth_service/core/exceptions/: __init__.py  auth.py  membership.py  organization.py  user.py
services/auth-service/src/auth_service/domain/interfaces/: __init__.py  external_services.py
services/auth-service/src/auth_service/domain/services/: __init__.py  auth_service.py  authentication_service.py  organization_service.py  user_service.py
services/auth-service/src/auth_service/infrastructure/repositories/: __init__.py  organization_member_repository.py  organization_organizer_repository.py  organization_repository.py  user_repository.py
services/auth-service/src/auth_service/schemas/: auth.py  organization.py  user.py
services/auth-service/src/auth_service/templates/: reset_password.html  verify_email.html
services/auth-service/src/auth_service/utils/: organization_utils.py  upload_image.py
services/auth-service/src/config/: settings.py
services/auth-service/src/core/: app.py  exceptions.py  security.py
services/auth-service/src/dependencies/: organization.py
services/auth-service/src/middlewares/: auth_middleware.py
services/auth-service/src/models/: __init__.py  enums.py  organization.py  user.py
services/auth-service/src/routes/: admin_routes.py  auth_routes.py  health_route.py  organizations_routes.py  user_routes.py
services/auth-service/src/schemas/: auth_response.py  organization.py  user.py
services/auth-service/src/services/: auth_service.py  mail_service.py
services/auth-service/src/templates/: verify_email.html
services/auth-service/src/utils/: organization_utils.py
services/auth-service/tests/: __init__.py  conftest.py
services/auth-service/tests/factories/: __init__.py  organization_factory.py  user_factory.py
services/auth-service/tests/integration/: test_auth_routes.py  test_health_routes.py  test_organization_routes.py  test_user_routes.py
services/auth-service/tests/unit/: test_auth_service.py  test_exceptions.py  test_factories.py  test_models.py  test_schemas.py
services/competitions-service/: .env.example  Dockerfile  pyproject.toml  rundev.sh
services/competitions-service/alembic/: env.py
services/competitions-service/alembic/versions/: 0cfd2963bbda_initial_structure.py  37b6ff4ada5e_add_stats.py  6d5521cb28f3_create_initial_tables.py  71f2b64e09f1_fix_circular_dependency.py  c3b7e68d2bce_initial_structure.py  ffe0de2f9d11_test.py
services/competitions-service/src/: main.py
services/competitions-service/src/config/: settings.py
services/competitions-service/src/core/: app.py
services/competitions-service/src/models/: __init__.py  competition.py  competitions.py  matches.py  modality.py  sport_ruleset.py  standings.py  stats.py  teams.py
services/competitions-service/src/routes/: competitions_routes.py  matches_routes.py  modality_routes.py  ranking_routes.py  routes.py  team_routes.py
services/competitions-service/src/schemas/: competition_schema.py  matches_schema.py  modality_schema.py  rounds_schema.py  teams_schema.py
services/competitions-service/src/services/: competition_generator.py  competitions_service.py  manege_matches_service.py  matches_service.py  modality_service.py  rounds_service.py  stats_service.py  teams_service.py
services/competitions-service/src/services/competition_generator/: competition_generator.py  end_group_phase.py  generate_competitions_utils.py  generate_elimination.py  generate_group.py  generate_league.py  standings_manager.py
services/competitions-service/tests/: conftest.py
services/competitions-service/tests/routes/: test_modality_routes.py
services/competitions-service/tests/unit/: test_modality_service.py
services/notifications-service/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  rundev.sh
services/notifications-service/alembic/: env.py
services/notifications-service/alembic/versions/: 20260114_1121_b4d8abcd7df6_create_notifications_table.py
services/notifications-service/docs/: ANALISE_NOTIFICACOES_ORGANIZACOES.md
services/notifications-service/scripts/: run-migrations.sh
services/notifications-service/src/notifications_service/: __init__.py  main.py
services/notifications-service/src/notifications_service/api/: __init__.py  dependencies.py
services/notifications-service/src/notifications_service/api/routes/: __init__.py  health_routes.py  notification_routes.py
services/notifications-service/src/notifications_service/core/: __init__.py  config.py  exceptions.py
services/notifications-service/src/notifications_service/domain/: __init__.py
services/notifications-service/src/notifications_service/infrastructure/: __init__.py
services/notifications-service/src/notifications_service/schemas/: __init__.py  notification.py
(+253 files in other folders)
