[project]
name = "common-lib"
version = "0.1.0"
description = "Utilitários compartilhados (Logs, Exceptions, Handlers)"
authors = [
    {name = "Gustavo Emanuel Silva Queiroz", email = "gustavoe.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "common"}]

[tool.poetry.dependencies]
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pydantic = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"