[tool.poetry]
name = "database-lib"
version = "0.1.0"
description = "Lib compartilhada de banco de dados"
authors = ["Gustavo <gustavoe.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "database"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"