[project]
name = "upload_s3"
version = "0.1.0"
description = "Faz o upload no bucket e retorna url de acesso"
readme = "README.md"
packages = [{include = "upload_s3"}]
requires-python = ">=3.12"

dependencies = [
    "boto3 (>=1.42.2,<2.0.0)",
    "fastapi[standard] (>=0.121.0,<0.124.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"