[project]
name = "competitions-service"
version = "0.1.0"
description = "Microserviço de gestão de competições"
authors = [
    {name = "Hian Silva",email = "hiansilacts@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12" # Ou sua versão do python
fastapi = "^0.123.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
database-lib = {path = "../../libs/database", develop = true}
common-lib = {path = "../../libs/common", develop = true}

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]
