[project]
name = "notifications-service"
version = "0.1.0"
description = "Serviço de notificações usando Novu"
authors = [
    {name = "Gustavo Emanuel Silva Queiroz", email = "gustavoe.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = ">=0.121.2,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
pydantic-settings = ">=2.12.0,<3.0.0"
alembic = ">=1.13.0"
psycopg2-binary = ">=2.9.0"
asyncpg = ">=0.29.0"
database-lib = {path = "../../libs/database", develop = true}
common-lib = {path = "../../libs/common", develop = true}
novu = "^1.7.0"
httpx = "^0.28.1"
setuptools = "^80.9.0"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
